--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,28 @@
 {
   "dependencies": {
     "com.appodeal.mediation": "https://github.com/appodeal/appodeal-unity-plugin-upm.git#v3.2.0-beta.2",
-    "com.code-philosophy.hybridclr": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.google.external-dependency-manager": "file:com.google.external-dependency-manager-1.2.177.tgz",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "4.4.2",
     "com.unity.ads.ios-support": "1.0.0",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.analytics": "3.8.1",
+    "com.unity.collab-proxy": "2.2.0",
+    "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.localization": "1.4.5",
     "com.unity.purchasing": "4.9.4",
     "com.unity.services.cloud-diagnostics": "1.0.6",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
